@@ -56,8 +56,8 @@
   <dependency step="toolset"/>
   Import layout tool, layouts and widgets.
  </import-step>
- <import-step id="localizer" version="20051230-01"
-              handler="Products.Localizer.exportimport.importLocalizer"
+ <import-step id="localizer" version="20060728-01"
+              handler="Products.CPSDefault.exportimport.importLocalizerAndClearCaches"
               title="Localizer">
   <dependency step="toolset"/>
   <dependency step="properties"/>
