@@ -12,8 +12,10 @@ New features:
 - #1702: Added new Catalan translation thanks to Santi Camps.
 Bug fixes:
 ~~~~~~~~~~
-- the title and post url in metafactory used to be non configurable
-- missing workflow_unpublish event for Content Portlet cache invalidation
+- The title and post url in metafactory used to be non configurable
+- Missing workflow_unpublish event for Content Portlet cache invalidation
+- Made the Localizer import step clear the portlets tool cache so that messages
+  are well translated when a new language is added.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
